# mctsshogirust

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_EN.md  changelog.html  examples.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  test_init.db  try.py
.doctrees/: changelog.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree
.doctrees/api/: index.doctree
.doctrees/reference/: modules.doctree  rustshogi.doctree
.github/workflows/: CI.yml  docs.yaml  test.yaml
_sources/api/: index.rst.txt
_static/: documentation_options.js
api/: index.html
benches/: shogi_benchmark.rs
docs/source/: changelog.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: index.rst
docs/source/reference/: modules.rst  rustshogi.rst
reference/: modules.html  rustshogi.html
rustshogi/: Cargo.toml
rustshogi/.env/: pyvenv.cfg
rustshogi/.env/Scripts/: activate  activate.bat
rustshogi/.github/workflows/: CI.yml
rustshogi/src/: address.rs  bitboard.rs  board.rs  color.rs  direction.rs  game.rs  lib.rs  mctsresult.rs  moves.rs  piece.rs  random.rs
shogi/: Cargo.toml
shogi/benches/: shogi_benchmark.rs
shogi/src/: address.rs  bitboard.rs  board.rs  color.rs  colortype.rs  common.rs  direction.rs  game.rs  hand.rs  lib.rs  main.rs  mctsresult.rs  moves.rs  piece.rs  random.rs  test_address.rs  test_bitboard.rs  test_board.rs  test_color.rs  test_common.rs  test_direction.rs  test_game.rs  test_hand.rs  test_moves.rs  test_piece.rs  test_random.rs
src/: lib.rs
src/rustshogi/: __init__.py  _core.pyi  address.rs  bitboard.rs  board.rs  color.rs  common.rs  direction.rs  evaluator.rs  game.rs  hand.rs  lib.rs  mctsresult.rs  move_pattern.rs  moves.rs  nn_model.rs  nn_model_example.rs  pca.rs  piece.rs  random.rs  test_address.rs  test_bitboard.rs  test_board.rs  test_board_pca.rs  test_color.rs  test_common.rs  test_direction.rs  test_evaluator.rs  test_game.rs  test_moves.rs  test_nn_model.rs  test_pca.rs  test_piece.rs
