[package]
name = "rustshogi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustshogi"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
bitvec = "1.0.1"
pyo3 = { version = "0.25.0", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shogi_benchmark"
harness = false
