[package]
name = "rustshogi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]
path = "src/rustshogi/lib.rs"

[dependencies]
rand = "0.8.5"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rayon = "1.8.1"
num_cpus = "1.16.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shogi_benchmark"
harness = false
