[package]
name = "rustshogi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustshogi"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
strum = "0.27.2"
strum_macros = "0.27.2"
rayon = "1.8.1"
num_cpus = "1.16.0"
lru = "0.12.5"
once_cell = "1.19.0"
ndarray = "0.15"
nalgebra = "0.33"
burn = { version = "0.18.0", features = ["ndarray", "autodiff"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "shogi_benchmark"
harness = false
