[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rustshogi"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "sphinx",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-material>=0.0.36",
    "sphinx-rtd-theme>=3.0.2",
    "taskipy>=1.14.1",
]

[tool.taskipy.tasks]
docs-generate = "sphinx-apidoc -o docs/source/reference src"
docs-open = "open docs/build/html/index.html"
